--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,5 +16,6 @@ jobs:
         COMPOSER_AUTH: ${{secrets.COMPOSER_AUTH}}
       with:
         process: 'install-magento'
+        magento_version: 2.4.7
         no_push: 1 //uncomment this to prevent src code from being pushed to repo
 
